--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   map_camera_flutter: ^0.0.8
   image: ^3.0.1
   fluttertoast: ^8.2.12
+  android_intent_plus: ^5.3.0
+  url_launcher: ^6.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
