--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.2.12
   android_intent_plus: ^5.3.0
   url_launcher: ^6.3.1
+  camera: ^0.11.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
