--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  map_camera_flutter: ^0.0.8
+  map_camera_flutter: ^0.0.7
   image: ^3.0.1
   fluttertoast: ^8.2.12
   android_intent_plus: ^5.3.0
+  permission_handler: ^11.4.0
   url_launcher: ^6.3.1
   camera: ^0.11.1
 dev_dependencies:
