--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   permission_handler: ^11.4.0
   url_launcher: ^6.3.1
   camera: ^0.11.1
+  geolocator: ^13.0.1
+  ffmpeg_kit_flutter_full_gpl: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
