--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   camera: ^0.11.1
   geolocator: ^13.0.1
   ffmpeg_kit_flutter_full_gpl: ^6.0.0
+  geocoding: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
